--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "homepage": "https://swapniljukariya.github.io/TodoDaily",
-  "name": "todoultra",
+  "name": "todoist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.6",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^10.12.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "tailwindcss": "^3.4.15"
   }
 }
